// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuideDrawer renders guide slide when a guide is selected 1`] = `
<div>
  <div
    class="sc-dvQaRk hfuJhn"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-TBWPX hSMBLj"
    >
      <span
        class="sc-ZOtfp jppFYN"
        data-testid="guidesBackButton"
      >
        <i
          class="sc-bdvvtL kSEjuX"
        >
          <span
            class="SVGInline SVGInline--cleaned centeredSvgIcon"
          >
            <svg
              class="SVGInline-svg SVGInline--cleaned-svg centeredSvgIcon-svg"
              style="width: 16px;height: 16px;"
            />
          </span>
        </i>
      </span>
      Title
    </h4>
    <div
      class="sc-bTfYFJ bpHA-Dr"
    />
    <div
      class="sc-Galmp fjUauS disable-font-ligatures"
    >
      <div>
        <div>
          Test Slide
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GuideDrawer renders list view including Remote Guides list 1`] = `
<div>
  <div
    class="sc-dvQaRk hfuJhn"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-TBWPX hSMBLj"
    >
      Neo4j Browser Guides 
    </h4>
    <div
      class="sc-bTfYFJ bpHA-Dr"
    />
    <div
      class="sc-gIDmLj bPNIJB slide"
      style="padding: 0px 15px;"
    >
      You can also access Browser guides by running
      <span
        class="sc-AjmGg guIoaZ remove-play-icon"
        data-populate=":guide [guide name]"
      >
        :guide [guide name]
      </span>
      in the code editor.
      <div
        class="sc-igXgud bdHQDe"
      >
        <div
          class="sc-efQSVx cziNtw"
        >
          Built-in guides
        </div>
      </div>
      <div
        class="sc-fydGpi hwViPQ"
      >
        <li
          class="sc-cjrPHo kPqeEi"
          data-testid="builtInGuideintro"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            intro
          </span>
          <div
            class="sc-igXgud hlpvnM"
          >
             
            Navigating Neo4j Browser
             
          </div>
        </li>
        <li
          class="sc-cjrPHo kPqeEi"
          data-testid="builtInGuideconcepts"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            concepts
          </span>
          <div
            class="sc-igXgud hlpvnM"
          >
             
            Property graph model concepts
             
          </div>
        </li>
        <li
          class="sc-cjrPHo kPqeEi"
          data-testid="builtInGuidecypher"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            cypher
          </span>
          <div
            class="sc-igXgud hlpvnM"
          >
             
            Cypher basics - create, match, delete
             
          </div>
        </li>
        <li
          class="sc-cjrPHo kPqeEi"
          data-testid="builtInGuidemovie-graph"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            movie-graph
          </span>
          <div
            class="sc-igXgud hlpvnM"
          >
             
            Queries and recommendations with Cypher - movie use case}
             
          </div>
        </li>
        <li
          class="sc-cjrPHo kPqeEi"
          data-testid="builtInGuidenorthwind-graph"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            northwind-graph
          </span>
          <div
            class="sc-igXgud hlpvnM"
          >
             
            Translate and import relation data into graph
             
          </div>
        </li>
      </div>
      <div
        class="sc-igXgud bdHQDe"
      >
        <div
          class="sc-efQSVx cziNtw"
          data-testid="remoteGuidesTitle"
        >
          Remote Guides
        </div>
      </div>
      <div
        class="sc-fydGpi hwViPQ"
      >
        <li
          class="sc-itWPBs dfXHLy"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
            data-testid="remoteGuideidentifier"
          >
            Title
          </span>
          <span
            class="sc-gHjyzD gRlSXV"
            data-testid="removeGuideidentifier"
          >
            <i
              class="sc-bdvvtL jIQruX sl-bin"
              style="line-height: inherit;"
            />
          </span>
        </li>
      </div>
      <div
        class="sc-JEhMO jRKHeM"
      >
        <a
          class="sc-cNKqjZ gsMctE"
          href="https://neo4j.com/graphgists/"
          rel="noreferrer"
          target="_blank"
        >
          More guides
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`GuideDrawer renders list view without Remote Guides 1`] = `
<div>
  <div
    class="sc-dvQaRk hfuJhn"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-TBWPX hSMBLj"
    >
      Neo4j Browser Guides 
    </h4>
    <div
      class="sc-bTfYFJ bpHA-Dr"
    />
    <div
      class="sc-gIDmLj bPNIJB slide"
      style="padding: 0px 15px;"
    >
      You can also access Browser guides by running
      <span
        class="sc-AjmGg guIoaZ remove-play-icon"
        data-populate=":guide [guide name]"
      >
        :guide [guide name]
      </span>
      in the code editor.
      <div
        class="sc-igXgud bdHQDe"
      >
        <div
          class="sc-efQSVx cziNtw"
        >
          Built-in guides
        </div>
      </div>
      <div
        class="sc-fydGpi hwViPQ"
      >
        <li
          class="sc-cjrPHo kPqeEi"
          data-testid="builtInGuideintro"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            intro
          </span>
          <div
            class="sc-igXgud hlpvnM"
          >
             
            Navigating Neo4j Browser
             
          </div>
        </li>
        <li
          class="sc-cjrPHo kPqeEi"
          data-testid="builtInGuideconcepts"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            concepts
          </span>
          <div
            class="sc-igXgud hlpvnM"
          >
             
            Property graph model concepts
             
          </div>
        </li>
        <li
          class="sc-cjrPHo kPqeEi"
          data-testid="builtInGuidecypher"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            cypher
          </span>
          <div
            class="sc-igXgud hlpvnM"
          >
             
            Cypher basics - create, match, delete
             
          </div>
        </li>
        <li
          class="sc-cjrPHo kPqeEi"
          data-testid="builtInGuidemovie-graph"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            movie-graph
          </span>
          <div
            class="sc-igXgud hlpvnM"
          >
             
            Queries and recommendations with Cypher - movie use case}
             
          </div>
        </li>
        <li
          class="sc-cjrPHo kPqeEi"
          data-testid="builtInGuidenorthwind-graph"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            northwind-graph
          </span>
          <div
            class="sc-igXgud hlpvnM"
          >
             
            Translate and import relation data into graph
             
          </div>
        </li>
      </div>
      <div
        class="sc-JEhMO jRKHeM"
      >
        <a
          class="sc-cNKqjZ gsMctE"
          href="https://neo4j.com/graphgists/"
          rel="noreferrer"
          target="_blank"
        >
          More guides
        </a>
      </div>
    </div>
  </div>
</div>
`;
